devops/minikube/app-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-app
spec:
  template:
    spec:
      containers:
        - name: portfolio-app
          imagePullPolicy: IfNotPresent
