devops/minikube/app-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-app
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8081
      nodePort: 30080
