devops/minikube/app-ingress-delete.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-app
$patch: delete
